# metadata-cost-estimation

./: DOCS.md  README.md  applicationsuite.py  point_costs.py  pyproject.toml  transform.py
checkpoints/: point_cost-2025-04-29.html  point_cost-2025-04-29.ipynb  point_cost-2025-04-30.ipynb
rules/: 4.1-and-4.2-point-lists.ttl  5.16.14.8-vav-ahu-fault.json
