[project]
name = "metadata-cost-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buildingmotif[topquadrant]",
    "marimo>=0.13.15",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "rdflib>=7.1.4",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/BuildingMOTIF", rev = "gtf-demo-branch" }
